syntax = "proto3";

package hestia.v1.idm;
import "google/protobuf/empty.proto";
option go_package = ".;pb";

service IdentityManagement {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Register (RegisterRequest) returns (google.protobuf.Empty);
    rpc Alive (TokenRequest) returns (google.protobuf.Empty);
    rpc Logout (TokenRequest) returns (google.protobuf.Empty);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string name = 2;
    string email = 3;
    repeated CompanyList companies = 4;
}

message CompanyList {
    string id = 1;
    string name = 2;
    optional string logo = 3;
}

message RegisterRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    // Timezone in the format of "America/New_York"
    string timezone = 4;
}

message TokenRequest {
    string token = 1;
}

